examples/errors/params_not_match/main.lc


function funA(name: string) {
    print(name);
}

function main() {
    funA(1);
}
